refactor: update deck structure and implement dealing and hand summation functions style: enhance bot options layout and styling fix: update navigation to game and about pages chore: create initial files for About and Game sections

--- a/Bots/bots.css
+++ b/Bots/bots.css
@@ -14,9 +14,18 @@
     cursor: pointer;
 }
 
-#bot-count {
-    display: hidden;
-    margin-top: 20px;
+.bot-count {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin: 20px;
+}
+
+.bot_submit button {
+    padding: 10px 0px;
+    font-size: 18px;
+    cursor: pointer;
+    width: 100%
 }
 
 select {
