--- a/Bots/bots.css
+++ b/Bots/bots.css
@@ -28,7 +28,16 @@
     width: 100%
 }
 
+.hidden_stuff {
+    display: none;
+}
+
+.show {
+    display: block;
+}
+
 select {
     padding: 5px;
     font-size: 16px;
 }
+
